fix: update Navbar logo visibility based on stage and pointer events

--- a/components/Landing/Navbar/navbar.module.scss
+++ b/components/Landing/Navbar/navbar.module.scss
@@ -164,7 +164,6 @@
   z-index: 2;
   top: 1.3rem;
   left: 2rem;
-  display: none;
 
   @media screen and (max-width: 1000px) {
     top: 2.2rem;
